--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -63,7 +63,7 @@
 \item \datedline{华为“编码合伙人”大赛 \textit{季军}}{2014 年 7 月}
 \item \datedline{“掌赢杯”南京市大学生程序设计大赛 \textit{亚军}}{2014 年 5 月}
 \item \datedline{“华为杯”苏鲁高校大学生程序设计大赛 \textit{亚军}}{2014 年 5 月}
-\item \datedline{2015-2016一等奖学金、正保教育奖学金、星网锐捷奖学金、张志伟奖学金}{2012年 -- 2015年}
+\item \datedline{一等学业奖学金、正保教育奖学金、星网锐捷奖学金、张志伟奖学金}{2012年 -- 2015年}
 \end{itemize}
 
 \section{\faInfo\ 其他}
