--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -16,7 +16,7 @@
 % {E-mail}{mobilephone}{homepage}
 % be careful of _ in emaill address
 %\contactInfo{zck921031@qq.com}{}{}
-\contactInfo{zck921031@qq.com}{(+86) 183-2248-xxxx}{}
+\contactInfo{zck921031@qq.com}{(+86) 183-2248-0965}{}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
@@ -26,6 +26,16 @@
 \textit{在读工学硕士}\ 计算机科学与技术， 预计 2018 年 1 月毕业
 \datedsubsection{\textbf{东南大学}\ 江苏， 南京}{2011 -- 2015}
 \textit{工学学士}\ 测控技术与仪器
+
+\section{\faHeartO\ 获奖情况}
+\begin{itemize}[parsep=0.5ex]
+	\item \datedline{ACM国际大学生程序设计竞赛(ACM-ICPC)区域赛 \textit{北京赛区金奖,杭州赛区金奖,广州赛区银奖,长沙赛区银奖}}{2013 年 10月 -- 2014 年 11 月}
+	\item \datedline{CCF全国青年大数据创新大赛·中文地址魔方大赛 \textit{冠军}}{2016 年 1 月}
+	\item \datedline{“掌赢杯”南京市大学生程序设计大赛 \textit{亚军}}{2014 年 5 月}
+	\item \datedline{“华为杯”苏鲁高校大学生程序设计大赛 \textit{亚军}}{2014 年 5 月}
+	\item \datedline{华为“编码合伙人”大赛 \textit{季军}}{2014 年 7 月}
+	\item \datedline{一等学业奖学金、正保教育奖学金、星网锐捷奖学金、张志伟奖学金}{2012年 -- 2015年}
+\end{itemize}
 
 \section{\faUsers\ 项目经历}
 \datedsubsection{\textbf{东南大学在线评测系统·部署与维护}}{2013年3月 -- 2014年6月}
@@ -53,17 +63,6 @@
   \item 编程语言: C++, Java, Python
   \item 研究领域: 深度学习(with \href{http://caffe.berkeleyvision.org/}{caffe} and \href{http://deeplearning.net/software/theano/}{theano}), 计算机视觉(with \href{http://opencv.org/}{OpenCV})
   \item 平台: 多年Linux使用经验，熟悉命令与配置，能通过编写脚本提高效率。
-\end{itemize}
-
-\section{\faHeartO\ 获奖情况}
-
-\begin{itemize}[parsep=0.5ex]
-\item \datedline{CCF全国青年大数据创新大赛·中文地址魔方大赛 \textit{冠军}}{2016 年 1 月}
-\item \datedline{ACM国际大学生程序设计竞赛(ACM-ICPC)区域赛 \textit{北京赛区金奖,杭州赛区金奖,广州赛区银奖,长沙赛区银奖}}{2013 年 10月 -- 2014 年 11 月}
-\item \datedline{华为“编码合伙人”大赛 \textit{季军}}{2014 年 7 月}
-\item \datedline{“掌赢杯”南京市大学生程序设计大赛 \textit{亚军}}{2014 年 5 月}
-\item \datedline{“华为杯”苏鲁高校大学生程序设计大赛 \textit{亚军}}{2014 年 5 月}
-\item \datedline{一等学业奖学金、正保教育奖学金、星网锐捷奖学金、张志伟奖学金}{2012年 -- 2015年}
 \end{itemize}
 
 \section{\faInfo\ 其他}
