--- a/resume-en.tex
+++ b/resume-en.tex
@@ -16,7 +16,11 @@
 % {E-mail}{mobilephone}{homepage}
 % be careful of _ in emaill address
 %\contactInfo{zck921031@qq.com}{}{}
-\contactInfo{zck921031@qq.com}{(+86) 183-2248-0965}{}
+%\contactInfo{zck921031@qq.com}{(+86) 183-2248-0965}{}
+%\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faLink\ {TTT} }
+%}
+\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faBirthdayCake\ {1992.10.31} \textperiodcentered\ \faHome\ {Sanming, Fujian}}
+\vspace{1.5ex} }
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
