--- a/resume-zck-en.tex
+++ b/resume-zck-en.tex
@@ -73,7 +73,7 @@
 \begin{itemize}[parsep=0.5ex]
 	\item Research Fields: Deep Learning(with \href{http://caffe.berkeleyvision.org/}{Caffe}, \href{https://keras.io/}{Keras} and \href{http://deeplearning.net/software/theano/}{Theano}), Computer Vision(with \href{http://opencv.org/}{OpenCV}).
 	\item Programming Languages: Familiar with C++, Java and Python.
-	\item Platform: Linux, familiar with commands and configures.
+	\item Platform: Familiar with Linux commands and configures.
 \end{itemize}
 
 \section{\faInfo\ Miscellaneous}
