--- a/resume-zck-en.tex
+++ b/resume-zck-en.tex
@@ -33,23 +33,34 @@
 \datedsubsection{\textbf{Southeast University} Nanjing, Jiangsu}{2011 -- 2015}
 \textit{Bachelor Student} in Instrument and Meter Engineering
 
+\section{\faUsers\ Experience}
+\datedsubsection{\textbf{Hong Kong University of Science and Technology} Hong Kong}{April 2017 -- Present}
+\role{Research Assistant}{in Department of Computer Science and Engineering}
+I have joined the \textsl{Big Data for Smart Transportation Application with Heterogeneous Data Sources} project.
+My job is to analyze the surveillance videos with computer vision and deep learning approaches.
+Our team has implemented a crowd counting algorithm based on density map regression.
+Currently, we focus on crowd prediction and anomaly detection to avoid potential accidents.
+
 \section{\faUsers\ Researches and Projects}
 %\section{Researches and Projects}
 \datedsubsection{\textbf{Fuzzy Rough Convolutional Neural Network}}{}
-\role{FRCNN}{Research on Deep Learning. We propose the fuzzy rough loss and develop a Fuzzy Rough Convolutional Neural Network (FRCNN) model.
-	The model (AlexNet) is pretrained on ImageNet and fine-tuned on the target dataset. Experimental results show that FRCNN is effective in fuzzy image classification.
+\role{FRCNN}{Research on Deep Learning. We propose a fuzzy rough loss and develop a Fuzzy Rough Convolutional Neural Network (FRCNN) model.
+	The pretrained AlexNet is fine-tuned on the target dataset with our loss function. Experimental results show that FRCNN is effective in fuzzy image classification.
 }
 \datedsubsection{\textbf{Southeast University Online Judge System}}{Mar.~2013~--~Jun.~2014}
 %\begin{figure}[H]	
 %	\includegraphics[width=1cm]  {figures/seuoj}
 %\end{figure}
-\role{SeuOJ@CentOS}{Cooperating with College of Software Engineering. It is based on \href{https://github.com/zhblue/hustoj}{HustOJ} project, working for programming contest online judging. Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.
+\role{SeuOJ@CentOS}{Cooperating with College of Software Engineering. It is based on \href{https://github.com/zhblue/hustoj}{HustOJ} Online Judging project.
+My work is to deploy and maintain the back-end daemon.
+During this project, I have found a thread blocking issue in HustOJ, and fixed it by changing permission switching order.
+Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.
 %\begin{onehalfspacing}
-	\begin{itemize}
-		\item \textbf{Main work}: Deployment and maintenance of the back-end daemon programming.
-		\item \textbf{Contribution:} I found and fixed a thread blocking issue caused by switching permission improperly. The efficiency of judging was greatly improved.
-		\item \textbf{Application:} We successfully hosted the 2013 and 2014 Southeast University Programming Contest, with judging up to 2883 copies of submissions in 5 hours.
-	\end{itemize}
+%	\begin{itemize}
+%		\item \textbf{Main work}: Deployment and maintenance of the back-end daemon programming.
+%		\item \textbf{Contribution:} I found and fixed a thread blocking issue caused by switching permission improperly. The efficiency of judging was greatly improved.
+%		\item \textbf{Application:} We successfully hosted the 2013 and 2014 Southeast University Programming Contest, with judging up to 2883 copies of submissions in 5 hours.
+%	\end{itemize}
 %\end{onehalfspacing}
 }
 
@@ -67,23 +78,22 @@
 \end{itemize}
 
 
-\section{\faCogs\ IT Skills}
+\section{\faCogs\ IT Skills and Miscellaneous}
 %\section{IT Skills}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
 	\item Research Fields: Deep Learning(with \href{http://caffe.berkeleyvision.org/}{Caffe}, \href{https://keras.io/}{Keras} and \href{http://deeplearning.net/software/theano/}{Theano}), Computer Vision(with \href{http://opencv.org/}{OpenCV}).
 	\item Programming Languages: Familiar with C++, Java and Python.
-	\item Platform: Familiar with Linux commands and configures.
-\end{itemize}
-
-\section{\faInfo\ Miscellaneous}
+%	\item Platform: Familiar with Linux commands and configures.
+%\end{itemize}
+%\section{\faInfo\ Miscellaneous}
 %\section{Miscellaneous}
 % increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.5ex]
+%\begin{itemize}[parsep=0.5ex]
   \item Language: English(CET6), referencing English papers and documents in daily life, communicating with others on GitHub and other English Q-A forums.
   \item Writing with LaTeX and Markdown, good communication skills.
   \item \faGithub Github \href{https://github.com/zck921031}{https://github.com/zck921031}.
-  \item Topcoder(Rating: 1819):\  \href{https://www.topcoder.com/members/zck921031/}{https://www.topcoder.com/members/zck921031/}
+%  \item Topcoder(Rating: 1819):\  \href{https://www.topcoder.com/members/zck921031/}{https://www.topcoder.com/members/zck921031/}
 \end{itemize}
 
 %% Reference
