--- a/resume-zck-en.tex
+++ b/resume-zck-en.tex
@@ -19,12 +19,10 @@
 %\contactInfo{zck921031@qq.com}{(+86) 183-2248-0965}{}
 %\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faLink\ {TTT} }
 %}
-\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faBirthdayCake\ {1992.10.31} \textperiodcentered\ \faHome\ {Sanming, Fujian}}
-\vspace{1.5ex} }
+\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faBirthdayCake\ {1992.10.31} \textperiodcentered\ \faHome\ {Sanming, Fujian}} }
 % {E-mail}{mobilephone}
 % keep the last empty braces!
-%\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
- 
+%\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{} 
 \section{\faGraduationCap\  Education}
 %\section{Education}
 \datedsubsection{\textbf{Tianjin University} Tianjin}{2015 -- Present}
@@ -32,43 +30,30 @@
 %\\ WAM: 90.5/100; Rank: 4/134
 \datedsubsection{\textbf{Southeast University} Nanjing, Jiangsu}{2011 -- 2015}
 \textit{Bachelor Student} in Instrument and Meter Engineering
-
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{Hong Kong University of Science and Technology} Hong Kong}{April 2017 -- Present}
+\datedsubsection{\textbf{Hong Kong University of Science and Technology} Hong Kong}{Apr. 2017 -- Present}
 \role{Research Assistant}{in Department of Computer Science and Engineering}
-I have joined the \textsl{Big Data for Smart Transportation Application with Heterogeneous Data Sources} project.
+I have joined the \textsl{Big Data for Smart Transportation Application with Heterogeneous Data Sources} project on April 2017.
 My job is to analyze the surveillance videos with computer vision and deep learning approaches.
 Our team has implemented a crowd counting algorithm based on density map regression.
 Currently, we focus on crowd prediction and anomaly detection to avoid potential accidents.
 
 \section{\faUsers\ Researches and Projects}
 %\section{Researches and Projects}
-\datedsubsection{\textbf{Fuzzy Rough Convolutional Neural Network}}{}
-\role{FRCNN}{Research on Deep Learning. We propose a fuzzy rough loss and develop a Fuzzy Rough Convolutional Neural Network (FRCNN) model.
-	The pretrained AlexNet is fine-tuned on the target dataset with our loss function. Experimental results show that FRCNN is effective in fuzzy image classification.
-}
+\datedsubsection{\textbf{Deep Learning for Fuzzy Image Classification}}{Aug. 2016 -- Present}
+\role{Research on Deep Learning}{This project focuses on training a Deep Convolutional Neural Network for fuzzy image classification, e.g., idensity prediciton based on facial expressions. We found that commonly used loss functions (KLdist, MSE) do not perform well in practice. To this end, we propose a new loss function for minimizing the fuzzy classification uncertainty of deep architectures, namely Fuzzy Rough Loss. Since we do not collect abuntant labeled data, we propose an adversarial multi-task loss for transfer learning.}
+%	We propose a fuzzy rough loss and develop a Fuzzy Rough Convolutional Neural Network (FRCNN) model.
+%	The pretrained AlexNet is fine-tuned on the target dataset with our loss function. Experimental results show that FRCNN is effective in fuzzy image classification.}
 \datedsubsection{\textbf{Southeast University Online Judge System}}{Mar.~2013~--~Jun.~2014}
-%\begin{figure}[H]	
-%	\includegraphics[width=1cm]  {figures/seuoj}
-%\end{figure}
 \role{SeuOJ@CentOS}{Cooperating with College of Software Engineering. It is based on \href{https://github.com/zhblue/hustoj}{HustOJ} Online Judging project.
 My work is to deploy and maintain the back-end daemon.
 During this project, I have found a thread blocking issue in HustOJ, and fixed it by changing permission switching order.
-Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.
-%\begin{onehalfspacing}
-%	\begin{itemize}
-%		\item \textbf{Main work}: Deployment and maintenance of the back-end daemon programming.
-%		\item \textbf{Contribution:} I found and fixed a thread blocking issue caused by switching permission improperly. The efficiency of judging was greatly improved.
-%		\item \textbf{Application:} We successfully hosted the 2013 and 2014 Southeast University Programming Contest, with judging up to 2883 copies of submissions in 5 hours.
-%	\end{itemize}
-%\end{onehalfspacing}
-}
-
+Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.}
 \section{\faHeartO\ Honors and Awards}
 %\section{Honors and Awards}
 \begin{itemize}[parsep=0.5ex]
 	\item \datedline{The ACM International Collegiate Programming Contest (ACM-ICPC) Asian Regional Contests: \\ \textbf{Gold Medal, Beijing Site 2014; Gold Medal, Hangzhou Site 2013; Silver Medal, Guangzhou Site 2014; Silver Medal, Changsha Site 2013}}{Oct. 2013~--~Nov. 2014}
-	\item \datedline{Chinese Address Magic Cube, CCF National Youth Big-Data Innovation Contest: \href{http://www.wid.org.cn/data/science/player/news/detail/6}{\textbf{First Place}}}{Jan. 2016}
+	\item \datedline{Chinese Address Magic Cube, CCF National Youth Big-Data Innovation Contest: \textbf{First Place}}{Jan. 2016}
 %	\item \textbf{Second Place} \datedline{Zhangying Cup Nanjing Collegiate Programming Contest}{May. 2014}
 %	\item \textbf{Second Place} \datedline{Huawei Cup Su-Lu Collegiate Programming Contest}{May. 2014}
 	\item \datedline{Zhangying Cup Nanjing Collegiate Programming Contest: \textbf{Second Place} }{May. 2014}
@@ -91,11 +76,10 @@ Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.
 % increase linespacing [parsep=0.5ex]
 %\begin{itemize}[parsep=0.5ex]
   \item Language: English(CET6), referencing English papers and documents in daily life, communicating with others on GitHub and other English Q-A forums.
-  \item Writing with LaTeX and Markdown, good communication skills.
+%  \item Writing with LaTeX and Markdown, good communication skills.
   \item \faGithub Github \href{https://github.com/zck921031}{https://github.com/zck921031}.
 %  \item Topcoder(Rating: 1819):\  \href{https://www.topcoder.com/members/zck921031/}{https://www.topcoder.com/members/zck921031/}
 \end{itemize}
-
 %% Reference
 %\newpage
 %\bibliographystyle{IEEETran}
