--- a/resume-zck-en.tex
+++ b/resume-zck-en.tex
@@ -19,7 +19,7 @@
 %\contactInfo{zck921031@qq.com}{(+86) 183-2248-0965}{}
 %\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faLink\ {TTT} }
 %}
-\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faBirthdayCake\ {1992.10.31} \textperiodcentered\ \faHome\ {Sanming, Fujian}} }
+\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \ \faWeixin\ zck921031 \ \faPhone\ {(+852) 6764-2081} \ \faBirthdayCake\ {1992.10.31} \ \faHome\ {Sanming, Fujian}} \vspace{1.0ex}}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{} 
@@ -38,16 +38,16 @@ My job is to analyze the surveillance videos with computer vision and deep learn
 Our team has implemented a crowd counting algorithm based on density map regression.
 Currently, we focus on crowd prediction and anomaly detection to avoid potential accidents.
 
-\section{\faUsers\ Researches and Projects}
+\section{\faSearch\ Researches and Projects}
 %\section{Researches and Projects}
 \datedsubsection{\textbf{Deep Learning for Fuzzy Image Classification}}{Aug. 2016 -- Present}
-\role{Research on Deep Learning}{This project focuses on training a Deep Convolutional Neural Network for fuzzy image classification, e.g., idensity prediciton based on facial expressions. We found that commonly used loss functions (KLdist, MSE) do not perform well in practice. To this end, we propose a new loss function for minimizing the fuzzy classification uncertainty of deep architectures, namely Fuzzy Rough Loss. Since we do not collect abuntant labeled data, we propose an adversarial multi-task loss for transfer learning.}
+\role{Research on Deep Learning}{This project focuses on training a Deep Convolutional Neural Network for fuzzy image classification, e.g., idensity prediciton from facial expressions. We find that commonly used loss functions (KLdist, MSE) do not perform well in practice. To this end, we propose a new Fuzzy Rough Loss function for minimizing the fuzzy classification uncertainty of deep architectures. Since the same emotion representation is different from people to people, we further introduce an adversarial multi-task loss for transfer learning.}
 %	We propose a fuzzy rough loss and develop a Fuzzy Rough Convolutional Neural Network (FRCNN) model.
 %	The pretrained AlexNet is fine-tuned on the target dataset with our loss function. Experimental results show that FRCNN is effective in fuzzy image classification.}
 \datedsubsection{\textbf{Southeast University Online Judge System}}{Mar.~2013~--~Jun.~2014}
 \role{SeuOJ@CentOS}{Cooperating with College of Software Engineering. It is based on \href{https://github.com/zhblue/hustoj}{HustOJ} Online Judging project.
 My work is to deploy and maintain the back-end daemon.
-During this project, I have found a thread blocking issue in HustOJ, and fixed it by changing permission switching order.
+During this project, I find a thread blocking issue in HustOJ, and fix it by changing permission switching order.
 Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.}
 \section{\faHeartO\ Honors and Awards}
 %\section{Honors and Awards}
@@ -58,7 +58,7 @@ Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.}
 %	\item \textbf{Second Place} \datedline{Huawei Cup Su-Lu Collegiate Programming Contest}{May. 2014}
 	\item \datedline{Zhangying Cup Nanjing Collegiate Programming Contest: \textbf{Second Place} }{May. 2014}
 	\item \datedline{Huawei Cup Su-Lu Collegiate Programming Contest: \textbf{Second Place} }{May. 2014}
-	\item \datedline{Huawei Coding Parters: \textbf{Third Place} }{July. 2014}
+%	\item \datedline{Huawei Coding Parters: \textbf{Third Place} }{July. 2014}
 	\item \datedline{\textbf{Scholarship}: Huawei Scholarship, The School's First Academic Scholarship, Zhengbao-Education Scholarship, Xingwangruijie Scholarship, Zhang-Zhiwei Scholarship}{2012~--~2016}
 \end{itemize}
 
@@ -76,7 +76,7 @@ Visit it at \href{http://acm.seu.edu.cn/oj/}{http://acm.seu.edu.cn/oj}.}
 % increase linespacing [parsep=0.5ex]
 %\begin{itemize}[parsep=0.5ex]
   \item Language: English(CET6), referencing English papers and documents in daily life, communicating with others on GitHub and other English Q-A forums.
-%  \item Writing with LaTeX and Markdown, good communication skills.
+  \item Writing with LaTeX and Markdown, good communication skills.
   \item \faGithub Github \href{https://github.com/zck921031}{https://github.com/zck921031}.
 %  \item Topcoder(Rating: 1819):\  \href{https://www.topcoder.com/members/zck921031/}{https://www.topcoder.com/members/zck921031/}
 \end{itemize}
