--- a/resume-zck-en.tex
+++ b/resume-zck-en.tex
@@ -19,7 +19,7 @@
 %\contactInfo{zck921031@qq.com}{(+86) 183-2248-0965}{}
 %\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \textperiodcentered\ \faPhone\ {(+86) 183-2248-0965} \textperiodcentered\ \faLink\ {TTT} }
 %}
-\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \ \faWeixin\ zck921031 \ \faPhone\ {(+852) 6764-2081} \ \faBirthdayCake\ {1992.10.31} \ \faHome\ {Sanming, Fujian}} \vspace{1.0ex}}
+\centerline{\sffamily\large{\faEnvelope\ {zck921031@qq.com} \ \faWeixin\ zck921031 \ \faPhone\ {18322480965} \ \faBirthdayCake\ {1992.10.31} \ \faHome\ {Sanming, Fujian}} \vspace{1.0ex}}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{} 
